# fmauch_universal_robot

./: README.md
end_effector/: CMakeLists.txt  package.xml
end_effector/launch/: display.launch
end_effector/meshes/: end_effector_2.0.STL
end_effector/urdf/: end_effector.urdf.xacro
ur5_e_moveit_config/config/: kinematics.yaml  ur5e222.srdf  ur5enew.srdf
ur5_e_moveit_config/launch/: move_group.launch  moveit.rviz  myworkcell_planning_execution.launch  start_all.launch  start_camera.launch  start_faker.launch  start_move_it.launch  ur5_e_moveit_planning_execution.launch
ur5_e_moveit_config/scripts/: moveit_test.py  quadrillion_test.py
ur_description/urdf/: ur5.urdf
ur_e_description/config/: left_ur5e_default.yaml
ur_e_description/meshes/ur5e/collision/: end_effector.stl
ur_e_description/urdf/: dual_ur5e_joint_limited_robot.urdf.xacro  end_effector.xacro  left_ur5e.urdf.xacro  newur5e.urdf.xacro  pad-ur5e.urdf.xacro  right_ur5e.urdf.xacro  ur5e.urdf  ur5e_joint_limited_robot.urdf.xacro  ur5e_robot.urdf.xacro
