<package format="2">
  <name>end_effector</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for end_effector</p>
    <p>This package contains configuration data, 3D models and launch files
for end_effector robot</p>
  </description>
  <author>liangxiao</author>
  <maintainer email="liangxiao010@outlook.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
